# language-golem

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  STYLE.md  pyproject.toml
.claude/commands/: commit-message.md
