# Copyright 2025 The Milton Hirsch Institute, B.V.
# SPDX-License-Identifier: Apache-2.0

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
dev-dependencies = [
    "conhead>=1.0,<2.0",
    "coverage>=7.0,<8.0",
    "pyright>=1.0,<2.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=1.0,<2.0",
    "ruff>=0.6,<1.0",
]

[tool.uv.sources]
fake-sounddevice = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
]

[tool.ruff]
line-length = 99
target-version = "py313"

[tool.conhead.header.htmllike]
extensions = ['md']
template = """
<!-- Copyright {{YEARS}} The Milton Hirsch Institute, B.V.
     SPDX-License-Identifier: Apache-2.0
-->

"""

[tool.conhead.header.pylike]
extensions = ['py', 'toml', 'yaml']
template = """
# Copyright {{YEARS}} The Milton Hirsch Institute, B.V.
# SPDX-License-Identifier: Apache-2.0

"""
[tool.pyright]
pythonVersion = "3.13"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportPrivateUsage = true
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportOverlappingOverload = true
reportUnknownLambdaType = true
reportInvalidTypeVarUse = true
reportUnnecessaryCast = true
reportUnsupportedDunderAll = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = [
    "mediasci",
    "tests.mediasci",
]
force-single-line = true
